Unique id for service name registered in eureka (#9)
* added id to be appended.
this will help mapping the deployer to be mapped with VM having different resources in terms of RAM, HDD, CPU

* corrected

* changed to token hex and not timestamp

* corrected test

* added new endpoint getactivedeployments
added new deployment limit MAX_DEPLOYMENTS

* increased max deployments to 5

* added setUp method

* corrected bug in case of jinja2 render exception.

* only dirs

* added new tests
